sourcecode css: fix overflowing and disable wordrapping

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -70,6 +70,10 @@ pre .il { color: #009999 } /* Literal.Number.Integer.Long */
   color: #7e7e7e;
 }
 
+.sourcecode td {
+  white-space: nowrap;
+}
+
 .sourcecode pre {
   margin: 0px;
 }
@@ -96,4 +100,8 @@ h2 {
 
 h3 {
   font-size: 1.5rem;
+}
+
+.tab-content {
+  overflow-x: auto;
 }
